--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ title: |
   How do we resolve conflicts?
 description: >- 
   The online supplementary materials accompanying the paper  
-  Human Merging Behaviour in a Coupled Driving Simulator: How do we resolve conflicts/home/olger/gems/gems/minima-2.5.1/assets/main.scss?
+  Human Merging Behaviour in a Coupled Driving Simulator: How do we resolve conflicts
 domain: tud-hri.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://tud-hri.github.io  # the base hostname and protocol for your site, e.g. http://example.com
 
